Added Range.union method